ffpp_headers = files(
  'ffpp/bpf_defines_user.h',
  'ffpp/bpf_helpers_user.h',
  'ffpp/collections.h',
  'ffpp/config.h',
  'ffpp/device.h',
  'ffpp/flow.h',
  'ffpp/handler.h',
  'ffpp/io.h',
  'ffpp/ipc.h',
  'ffpp/memory.h',
  'ffpp/mp.h',
  'ffpp/scaling_defines_user.h',
  'ffpp/scaling_helpers_user.h',
  'ffpp/task.h',
  'ffpp/utils.h',
)

install_headers(ffpp_headers, subdir: 'ffpp')
