[package]
name = "ffpp_user_sys"
version = "0.0.5"
authors = ["Zuo Xiang <xianglinks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ffpp_user_sys"
path = "src/lib.rs"
doctest = false

[dependencies]
ffpp-ffi = {version="0.0.5", path = "../ffi"}
libc = "0.2"
