test_dummy = executable(
  'test_dummy', 'test_dummy.c',
  include_directories : inc,
  dependencies: ffpp_deps,
  link_with : [ffpplib_shared])

test_mvec = executable(
  'test_mvec', 'test_mvec.c',
  include_directories : inc,
  dependencies: ffpp_deps,
  link_with : [ffpplib_shared])

test_munf = executable(
  'test_munf', 'test_munf.c',
  include_directories : inc,
  dependencies: ffpp_deps,
  link_with : [ffpplib_shared])

test_pye = executable(
  'test_pye', 'test_pye.c',
  include_directories : inc,
  dependencies: ffpp_deps,
  link_with : [ffpplib_shared])

test_pye_pybind11 = executable(
  'test_pye_pybind11', 'test_pye_pybind11.cpp',
  include_directories : inc,
  dependencies: ffpp_deps,
  link_with : [ffpplib_shared])
