[package]
name = "ffpp-ffi"
version = "0.0.5"
authors = ["Zuo Xiang <xianglinks@gmail.com>"]
edition = "2018"
build = "build.rs"
links = "ffpp"
description = """
FFPP FFI bindings for native libraries.
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "ffpp_ffi"
doctest = false

[build-dependencies]
bindgen = "0.54"
